--- a/templates/core/landing.html
+++ b/templates/core/landing.html
@@ -568,10 +568,9 @@
             </li>
             <li class="flex items-start gap-2.5">
               <div class="w-7 h-7 bg-slate-800/50 rounded-lg flex items-center justify-center flex-shrink-0 mt-0.5">
-                <svg class="w-3.5 h-3.5 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"></path>
-                </svg>
+                <img src="https://i.ibb.co/x8B6qgL4/sdc-logo.png" alt="SDC Logo" class="w-5 h-5 object-contain" />
               </div>
+              
               <div class="flex items-center space-x-2">
                 <img src="https://i.ibb.co/x8B6qgL4/sdc-logo.png" alt="SDC Logo" class="w-5 h-5 rounded-sm">
                 <div>
